--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-striped tabs-top tabs-background-assertive tabs-color-light">
+<ion-tabs class="tabs-striped tabs-top tabs-background-dark tabs-color-light">
 
   <ion-tab title="Events" href="#/tab/events">
     <ion-nav-view name="tab-events"></ion-nav-view>
