changed the css a bit

--- a/www/templates/tab-events.html
+++ b/www/templates/tab-events.html
@@ -1,5 +1,5 @@
-<ion-view view-title="BC German Club">
-<ion-content padding="true">
+<ion-view view-title="BC German Club"  >
+<ion-content padding="true" >
 
 
 <div class="list card" ng-repeat="event in eventEntries">
@@ -7,14 +7,14 @@
 
     <div class="item item-icon-left">
       <i class="icon ion-calendar"></i>
-      <b>{{event.name}}</b>
+      <b style="color:#11C1F3">{{event.name}}</b>
     </div>
 
-    <p><b>Date</b> {{event.date}}</p>
+    <p ><b>Date</b> {{event.date}}</p>
 
     <p><b>Location</b> {{event.location}}</p>
 
-    <p>{{event.description}}</p>
+    <p >{{event.description}}</p>
 
   </div>
 
