--- a/www/templates/tab-links.html
+++ b/www/templates/tab-links.html
@@ -1,12 +1,12 @@
-<ion-view view-title="BC German Club">
-<ion-content padding="true">
+<ion-view view-title="BC German Club"  >
+<ion-content padding="true" >
 
-  <div class="list card" ng-repeat="link in linkEntries">
-    <div class="item item-body item-text-wrap">
+  <div class="list card" ng-repeat="link in linkEntries" >
+    <div class="item item-body item-text-wrap" >
 
     <a href="{{item.link}}" class="item item-icon-left dark">
-      <i class="icon dark ion-social-youtube"></i>
-      <b>{{link.title}}</b>
+      <i class="icon ion-social-youtube-outline"></i> 
+      <b style="color:#11C1F3">{{link.title}}</b>
     </a>
 
     <p>
