--- a/www/templates/tab-suggestions.html
+++ b/www/templates/tab-suggestions.html
@@ -1,5 +1,5 @@
-<ion-view view-title="BC German Club">
-  <ion-content padding="true">
+<ion-view view-title="BC German Club" >
+  <ion-content padding="true" style="color:#11C1F3">
 
 
 <div id="disqus_thread"></div>
